# transparentd

./: Cargo.toml  README.md
src/: config.rs  i3.rs  ipc.rs  main.rs
